Fixed misaligned select boxes

--- a/admin-dev/themes/new-theme/scss/theme.scss
+++ b/admin-dev/themes/new-theme/scss/theme.scss
@@ -156,3 +156,11 @@ table.table {
     width: 100%;
   }
 }
+
+.choice-table {
+  .table {
+    .form-check {
+        padding-left: 0;
+    }
+  }
+}
